--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,34 @@
 body {
 	font-family: monospace;
-	background-color: #333;
+	background-color: #111;
 	color: #3f3;
 	display: flex;
 	flex-flow: row wrap;
 	
 	text-align: center;
+	
 }
 
 .panel {
-	border: 1px dotted #444;
-	margin: auto;
+	margin: 1em auto;
 	padding: 1em;
 	width: 15%;
+	background-color: #222;
+	border: 4px outset #292929;
 	
 	display: flex;
 	flex-flow: column wrap;
-	box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.26);
+	box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .label {
+	background-color: #000;
 	border: 1px solid #555;
 	margin: auto;
 	padding: 1em;
 	height: 20%;
 	box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.26);
+	text-align: left;
 }
 
 button {
@@ -33,6 +37,7 @@ button {
 	margin: auto;
 	color: #3f3;
 	width: 50%;
+	border: 2px outset #6a6a6a;
 }
 
 .pad {
