--- a/css/styles.css
+++ b/css/styles.css
@@ -4,21 +4,25 @@ body {
 	color: #3f3;
 	display: flex;
 	flex-flow: row wrap;
-	
+	align-items: center;
 	text-align: center;
-	
 }
+
+/* CONTROL PANEL */
 
 .panel {
 	margin: 1em auto;
 	padding: 1em;
 	width: 15%;
+	height: 15%;
 	background-color: #222;
 	border: 4px outset #292929;
 	
 	display: flex;
 	flex-flow: column wrap;
 	box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+	transition: .2s ease;
+	min-width: 200px;
 }
 
 .label {
@@ -57,6 +61,12 @@ button {
 	width: 100%;
 }
 
+/* MAP DISPLAY */
+
+.mapWrapper {
+	min-width: 300px;
+}
+
 .map {
 	background-color: #000;
 	border-radius: 2px;
@@ -72,10 +82,16 @@ button {
 	border: 2px dotted #112;
 }
 
-.green {
-	color: green;
-}
+/* CUSTOM SLIDER */
 
-.red {
-	color: red;
+.slider {
+	background-color: #000;
+	border-radius: 2px;
+}
+.sliderFill {
+	background-color: #0f0;
+	border-radius: 2px;
+	padding: 1em;
+	color: #000;
+	transition: .2s ease;
 }
