--- a/css/styles.css
+++ b/css/styles.css
@@ -84,9 +84,29 @@ button {
 
 /* CUSTOM SLIDER */
 
-.meter {
-	background-color: #000;
+meter {
+	width: 100%;
+	height: 24px;
+	border: 2px outset #fff;
 	border-radius: 2px;
+}
+meter::-webkit-meter-bar {
+	border-radius: 2px;
+}
+meter::-webkit-meter-optimum-value {
+    background: #07b500;
+	border-radius: 2px;
+    transition: .2s ease width;
+}
+meter::-webkit-meter-suboptimum-value {
+  background: #c3a400;
+	border-radius: 2px;
+    transition: .2s ease width;
+}
+meter::-webkit-meter-even-less-good-value {
+  background: #be0000;
+	border-radius: 2px;
+    transition: .2s ease width;
 }
 
 .slider {
