Added death condition and effects

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,15 +44,31 @@ body {
 	border: 5px inset rgba(131, 131, 131, 0.25);
 	margin: auto;
 	padding: 1em;
-	height: 20%;
 	box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.26);
 	text-align: left;
 	overflow-y: scroll;
+	width: 380px;
 	height: 224px;
 }
 
 .console strong {
 	color: rgb(255, 45, 45);
+}
+
+
+.consoleDeath {
+	animation: dieOut 1s ease;
+	background: #f00;
+}
+
+.consoleDeath > * {
+	animation: dieOut 1s ease;
+	animation-fill-mode: forwards;
+}
+
+.consoleDead {
+	background: #000;
+	color: #000;
 }
 
 .blinking {
@@ -65,6 +81,22 @@ body {
 	}
 	80% {
 		opacity: 0;
+		color: #333;
+	}
+}
+
+@keyframes dieOut {
+	0% {
+		opacity: 1;
+		background: #0f0;
+	}
+	90% {
+		opacity: 1;
+		background: #0f0;
+	}
+	100% {
+		opacity: 0;
+		background: #000;
 	}
 }
 
