Changed visuals to use fancy unicode characters

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,8 @@ button {
 	color: #00d8ff;
 	text-shadow: 0px 0px 20px rgba(0, 216, 255, 0.69);
 	border: 2px dotted #112;
+    width: 32px;
+    height: 32px;
 }
 
 /* CUSTOM SLIDER */
